[package]
name = 'sg-1000-emu'
version = '0.1.0'
authors = ['themayoras <ben.mayoras@gmail.com>']
edition = '2018'

[dependencies]
num = '0.2'
num-derive = '0.3'
num-traits = '0.2'
piston = '0.49.0'
piston2d-graphics = '0.35.0'
piston2d-opengl_graphics = '0.70.0'
pistoncore-glutin_window = '0.63.0'
piston_window = '0.105.0'

[dependencies.z80]
path = 'libs/z80'

[dependencies.bus]
path = 'libs/bus'

[dependencies.tms9918]
path = 'libs/tms9918'
