[package]
name = 'tms9918'
version = '0.1.0'
authors = ['themayoras <ben.mayoras@gmail.com>']
edition = '2018'

[dependencies]
piston = '0.49.0'
piston2d-graphics = '0.35.0'
piston2d-opengl_graphics = '0.70.0'
pistoncore-glutin_window = '0.63.0'
image = '0.22.3'
piston_window = '0.105.0'

[dependencies.bus]
path = "../bus"